--- a/control2TBDBackEnd/src/main/resources/application.properties
+++ b/control2TBDBackEnd/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=control2TBD
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/control2TBD}
+spring.datasource.username=${DATABASE_USER:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:admin}
