--- a/control2TBDBackEnd/pom.xml
+++ b/control2TBDBackEnd/pom.xml
@@ -69,6 +69,10 @@
 			<artifactId>sql2o</artifactId>
 			<version>1.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-spatial</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
