--- a/control2TBDBackEnd/src/main/resources/application.properties
+++ b/control2TBDBackEnd/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=control2TBD
+
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/control2TBD}
-spring.datasource.username=${DATABASE_USER:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:admin}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=8000
