--- a/control2TBDBackEnd/pom.xml
+++ b/control2TBDBackEnd/pom.xml
@@ -76,6 +76,12 @@
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-spatial</artifactId>
+			<!-- La versión es gestionada por Spring Boot BOM -->
+		</dependency>
+		<dependency>
+			<groupId>org.n52.jackson</groupId>
+			<artifactId>jackson-datatype-jts</artifactId>
+			<version>1.2.10</version> <!-- Esta versión es compatible con Jackson 2.12+ -->
 		</dependency>
 	</dependencies>
 
