--- a/control2TBDBackEnd/src/main/resources/application.properties
+++ b/control2TBDBackEnd/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=control2TBD
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/TBD_control2
+spring.datasource.url=jdbc:postgresql://localhost:5432/control2TBD
 spring.datasource.username=postgres
-spring.datasource.password=donjuan
+spring.datasource.password=postgre
 
 spring.jpa.hibernate.ddl-auto=update
 
